feature: organizations and protocol edditing
