# internal/app/handlers/requests/center_model.go
@@ -5,14 +5,18 @@ type DeleteCenter struct {
 }
 
 type AddCenter struct {
-	Name string `json:"name"`
+	Name           string `json:"name"`
+	OrganizationID int    `json:"organization_id"`
 }
 
 type UpdateCenter struct {
-	CenterID int    `json:"center_id"`
-	Name     string `json:"name"`
+	CenterID       int    `json:"center_id"`
+	OrganizationID int    `json:"organization_id"`
+	Name           string `json:"name"`
 }
 
 type GetCenterName struct {
 	ID int `json:"center_id"`
 }
+
+// TODO :  при создании указывать организацию, после этого написать метод, который будет добавлять текущий центр к организации
