# internal/app/handlers/requests/organization_model.go
@@ -1,0 +1,18 @@
+package requests
+
+type DeleteOrganization struct {
+	ID int `json:"organization_id"`
+}
+
+type AddNewOrganization struct {
+	Name string `json:"name"`
+}
+
+type UpdateOrganization struct {
+	CenterID int    `json:"organization_id"`
+	Name     string `json:"name"`
+}
+
+type GetOrganizationName struct {
+	ID int `json:"organization_id"`
+}
