# internal/app/handlers/requests/user_model.go
@@ -1,11 +1,12 @@
 package requests
 
 type Registration struct {
-	Email    string `json:"email"`
-	Name     string `json:"name"`
-	Role     int    `json:"role"`
-	CenterID int    `json:"center_id"`
-	Password string `json:"password,omitempty"`
+	Email          string `json:"email"`
+	Name           string `json:"name"`
+	Role           int    `json:"role"`
+	CenterID       int    `json:"center_id"`
+	Password       string `json:"password,omitempty"`
+	OrganizationID int    `json:"organization_id"`
 }
 
 type Login struct {
@@ -18,12 +19,13 @@ type CheckToken struct {
 }
 
 type Update struct {
-	ID       int    `json:"id"`
-	Role     int    `json:"role"`
-	CenterID int    `json:"center_id"`
-	Email    string `json:"email"`
-	Name     string `json:"name"`
-	Paswword string `json:"password"`
+	ID             int    `json:"id"`
+	Role           int    `json:"role"`
+	CenterID       int    `json:"center_id"`
+	Email          string `json:"email"`
+	Name           string `json:"name"`
+	Paswword       string `json:"password"`
+	OrganizationID int    `json:"organization_id"`
 }
 
 type Delete struct {
