# internal/app/handlers/responses/center_model.go
@@ -1,6 +1,7 @@
 package responses
 
 type Center struct {
-	CenterId int    `json:"center_id" gorm:"primaryKey"`
-	Name     string `json:"center_name"`
+	CenterId       int    `json:"center_id" gorm:"primaryKey"`
+	Name           string `json:"center_name"`
+	OrganizationID int    `json:"organization_id"`
 }
