# internal/app/handlers/responses/organization_model.go
@@ -1,0 +1,6 @@
+package responses
+
+type Organization struct {
+	ID   int    `json:"organization_id"  gorm:"primaryKey"`
+	Name string `json:"name"`
+}
